
public abstract class PowerUpDecorator {

    public abstract int getHealthBonus();

    public abstract int getStrengthBonus();

    public abstract double getSpeedBonus();
}
